// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate — Harish Naik with-spouse Factor B verification > full CrsResult snapshot — locks Factor B tables, spouse transferability, and all sections 1`] = `
{
  "breakdown": {
    "additionalTotal": 0,
    "agePoints": 55,
    "canadianEducationPoints": 0,
    "canadianExpPoints": 0,
    "coreTotal": 314,
    "eduCanadianExpTransfer": 0,
    "eduLanguageTransfer": 25,
    "educationPoints": 126,
    "firstLanguagePoints": 109,
    "foreignExpCanadianExpTransfer": 0,
    "foreignExpLanguageTransfer": 25,
    "frenchBonusPoints": 0,
    "provincialNomination": 0,
    "secondLanguagePoints": 0,
    "siblingPoints": 0,
    "spousePoints": 24,
    "total": 364,
    "transferTotal": 50,
  },
  "eligibility": {
    "cec": {
      "eligible": false,
      "likely": false,
      "reason": "Requires at least 1 year of authorized Canadian work experience.",
    },
    "expressEntryPool": {
      "eligible": true,
      "likely": true,
      "reason": "Eligible to create and submit an Express Entry profile immediately.",
    },
    "fst": {
      "eligible": false,
      "likely": false,
      "reason": "NOC 21211 is not in a Federal Skilled Trades occupation group.",
    },
    "fsw": {
      "eligible": true,
      "likely": true,
      "reason": "Scores 75/100 on FSW 67-point grid — clears the pass mark. Eligible to create profile.",
    },
  },
  "firstLanguageBands": {
    "listening": 9,
    "reading": 8,
    "speaking": 9,
    "writing": 9,
  },
  "fswGrid": {
    "adaptability": 5,
    "age": 9,
    "education": 23,
    "eligible": true,
    "language": 23,
    "total": 75,
    "workExperience": 15,
  },
  "fswImprovements": [],
  "proofOfFundsRequired": 19001,
  "proofOfFundsSufficient": true,
  "rulesVersion": "1d1abc5d",
  "scenarios": [
    {
      "change": "Achieve CLB 10 in all four language abilities",
      "competitive": false,
      "currentCrs": 364,
      "delta": 19,
      "name": "Maximize Language (CLB 10 All Abilities)",
      "projectedCrs": 383,
    },
    {
      "change": "Receive Enhanced PNP nomination",
      "competitive": true,
      "currentCrs": 364,
      "delta": 600,
      "name": "Provincial Nomination (PNP)",
      "projectedCrs": 964,
    },
    {
      "change": "1 year of authorized Canadian work in qualifying NOC",
      "competitive": false,
      "currentCrs": 364,
      "delta": 85,
      "name": "Obtain 1 Year of Canadian Work Experience",
      "projectedCrs": 449,
    },
  ],
  "secondLanguageBands": undefined,
}
`;

exports[`calculate — Kishore Sai ground-truth verification > full CrsResult snapshot — locks all sections, eligibility, scenarios, and improvements 1`] = `
{
  "breakdown": {
    "additionalTotal": 0,
    "agePoints": 110,
    "canadianEducationPoints": 0,
    "canadianExpPoints": 0,
    "coreTotal": 372,
    "eduCanadianExpTransfer": 0,
    "eduLanguageTransfer": 50,
    "educationPoints": 135,
    "firstLanguagePoints": 127,
    "foreignExpCanadianExpTransfer": 0,
    "foreignExpLanguageTransfer": 25,
    "frenchBonusPoints": 0,
    "provincialNomination": 0,
    "secondLanguagePoints": 0,
    "siblingPoints": 0,
    "spousePoints": 0,
    "total": 447,
    "transferTotal": 75,
  },
  "eligibility": {
    "cec": {
      "eligible": false,
      "likely": false,
      "reason": "Requires at least 1 year of authorized Canadian work experience.",
    },
    "expressEntryPool": {
      "eligible": true,
      "likely": true,
      "reason": "Eligible to create and submit an Express Entry profile immediately.",
    },
    "fst": {
      "eligible": false,
      "likely": false,
      "reason": "NOC 21211 is not in a Federal Skilled Trades occupation group.",
    },
    "fsw": {
      "eligible": true,
      "likely": true,
      "reason": "Scores 70/100 on FSW 67-point grid — clears the pass mark. Eligible to create profile.",
    },
  },
  "firstLanguageBands": {
    "listening": 9,
    "reading": 10,
    "speaking": 9,
    "writing": 9,
  },
  "fswGrid": {
    "adaptability": 0,
    "age": 12,
    "education": 23,
    "eligible": true,
    "language": 24,
    "total": 70,
    "workExperience": 11,
  },
  "fswImprovements": [],
  "proofOfFundsRequired": 15263,
  "proofOfFundsSufficient": true,
  "rulesVersion": "1d1abc5d",
  "scenarios": [
    {
      "change": "Reach 3 full years of foreign work experience",
      "competitive": false,
      "currentCrs": 447,
      "delta": 25,
      "name": "Hit 3-Year Foreign Work Mark",
      "projectedCrs": 472,
    },
    {
      "change": "Achieve CLB 10 in all four language abilities",
      "competitive": false,
      "currentCrs": 447,
      "delta": 9,
      "name": "Maximize Language (CLB 10 All Abilities)",
      "projectedCrs": 456,
    },
    {
      "change": "Receive Enhanced PNP nomination",
      "competitive": true,
      "currentCrs": 447,
      "delta": 600,
      "name": "Provincial Nomination (PNP)",
      "projectedCrs": 1047,
    },
    {
      "change": "1 year of authorized Canadian work in qualifying NOC",
      "competitive": true,
      "currentCrs": 447,
      "delta": 78,
      "name": "Obtain 1 Year of Canadian Work Experience",
      "projectedCrs": 525,
    },
  ],
  "secondLanguageBands": undefined,
}
`;

exports[`calculate — provincial nomination > full CrsResult snapshot — locks complete nominated-applicant output including Section D 1`] = `
{
  "breakdown": {
    "additionalTotal": 600,
    "agePoints": 110,
    "canadianEducationPoints": 0,
    "canadianExpPoints": 0,
    "coreTotal": 372,
    "eduCanadianExpTransfer": 0,
    "eduLanguageTransfer": 50,
    "educationPoints": 135,
    "firstLanguagePoints": 127,
    "foreignExpCanadianExpTransfer": 0,
    "foreignExpLanguageTransfer": 25,
    "frenchBonusPoints": 0,
    "provincialNomination": 600,
    "secondLanguagePoints": 0,
    "siblingPoints": 0,
    "spousePoints": 0,
    "total": 1047,
    "transferTotal": 75,
  },
  "eligibility": {
    "cec": {
      "eligible": false,
      "likely": false,
      "reason": "Requires at least 1 year of authorized Canadian work experience.",
    },
    "expressEntryPool": {
      "eligible": true,
      "likely": true,
      "reason": "Eligible to create and submit an Express Entry profile immediately.",
    },
    "fst": {
      "eligible": false,
      "likely": false,
      "reason": "NOC 21211 is not in a Federal Skilled Trades occupation group.",
    },
    "fsw": {
      "eligible": true,
      "likely": true,
      "reason": "Scores 70/100 on FSW 67-point grid — clears the pass mark. Eligible to create profile.",
    },
  },
  "firstLanguageBands": {
    "listening": 9,
    "reading": 10,
    "speaking": 9,
    "writing": 9,
  },
  "fswGrid": {
    "adaptability": 0,
    "age": 12,
    "education": 23,
    "eligible": true,
    "language": 24,
    "total": 70,
    "workExperience": 11,
  },
  "fswImprovements": [],
  "proofOfFundsRequired": 15263,
  "proofOfFundsSufficient": true,
  "rulesVersion": "1d1abc5d",
  "scenarios": [
    {
      "change": "Reach 3 full years of foreign work experience",
      "competitive": true,
      "currentCrs": 1047,
      "delta": 25,
      "name": "Hit 3-Year Foreign Work Mark",
      "projectedCrs": 1072,
    },
    {
      "change": "Achieve CLB 10 in all four language abilities",
      "competitive": true,
      "currentCrs": 1047,
      "delta": 9,
      "name": "Maximize Language (CLB 10 All Abilities)",
      "projectedCrs": 1056,
    },
    {
      "change": "1 year of authorized Canadian work in qualifying NOC",
      "competitive": true,
      "currentCrs": 1047,
      "delta": 78,
      "name": "Obtain 1 Year of Canadian Work Experience",
      "projectedCrs": 1125,
    },
  ],
  "secondLanguageBands": undefined,
}
`;
